# aptify

./: LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: deploy-ui.yml
api/: .gitignore  Dockerfile  README.md  __init__.py  index.py  pyproject.toml  state.py  utils.py
api/routers/: __init__.py  communications.py  documents.py  email.py  leasing.py  tenants.py  vendors.py
api/src/aptify_api/: app.py
api/src/aptify_api/db/chroma/: chroma.sqlite3
api/src/aptify_api/routers/: analytics.py  documents.py  email.py  feedback.py  intake.py  knowledge.py  maintenance.py  owners.py  payments.py
api/src/aptify_api/services/: __init__.py  rag.py
api/src/aptify_api/services/rag/: __init__.py  chains.py  prompts.py
api/src/aptify_api/utils/: __init__.py  init_vector_db.py  rag.py
docs/: ai-enhanced-property-management-system-prd.md
docs/features/: AI_Command_Console_PRD.md  AI_Tenant_Intake_PRD.md  Audit_Governance_PRD.md  Data_Analytics_PRD.md  Documents_PRD.md  Email_PRD.md  House_Acceptance_PRD.md  Knowledge_RAG_PRD.md  Lease_Contract_PRD.md  Owner_Management_PRD.md  Rent_Payment_PRD.md  Repair_Maintenance_PRD.md  Structured_Extraction_PRD.md  Tenant_Communication_PRD.md  Tenant_Management_PRD.md  Vendor_Management_PRD.md  Work_Order_Drafting_PRD.md
mocks/: index.html
ui/: .eslintrc.json  .gitignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/app/: queryClient.ts  store.ts
ui/src/features/: DashboardLayout.tsx  (+2 more)
(+13 files in other folders)
