[project]
name = "aptify-api"
version = "0.1.0"
description = "FastAPI backend powering the Aptify property management prototype."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0,<1.0.0",
  "langchain>=1.0.8",
  "langchain-community>=0.4.1",
  "pydantic>=2.6.0,<3.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aptify_api"]

[dependency-groups]
dev = ["uvicorn>=0.38.0"]
