[project]
name = "aptify-api"
version = "0.1.0"
description = "FastAPI backend powering the Aptify property management prototype."
readme = "README.md"
requires-python = ">=3.10.14"
dependencies = [
  "chromadb>=1.3.5",
  "fastapi>=0.111.0,<1.0.0",
  "langchain>=1.0.8",
  "langchain-chroma>=1.0.0",
  "langchain-community>=0.4.1",
  "langchain-core>=1.1.0",
  "langchain-huggingface>=1.0.1",
  "langchain-ollama>=1.0.0",
  "langchain-openai>=1.0.3",
  "langchain-tavily>=0.2.13",
  "pydantic>=2.6.0,<3.0.0",
  "pypdf>=6.3.0",
  "sentence-transformers>=5.1.2",
  "torch>=2.9.1",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aptify_api"]

[dependency-groups]
dev = ["uvicorn>=0.38.0"]
